--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.jpa.show-sql=true
 
 
 # Integrations
-spring.cloud.openfeign.client.config.payment-service-client.url=${PAYMENT_SERVICE_URL:http://http//localhost:9090/host}
+spring.cloud.openfeign.client.config.payment-service-client.url=${PAYMENT_SERVICE_URL:http://localhost:9090/host/credit-card-payment-api}
