feat: apache kafka in the docker compose, app is consuming messages sucessfuly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.datasource.password=${DB_PASSWORD:123}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
 # Integrations
 spring.cloud.openfeign.client.config.payment-service-client.url=${PAYMENT_SERVICE_URL:http://localhost:9090/host/credit-card-payment-api}
+
+# kafka
+kafka.bootstrap.servers=127.0.0.1:9092
+kafka.group-id=group_id
+kafka.topic-name=bank-transfer-payment-update
