feat: readme shoing the kafka message being consumed

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,8 @@ services:
   db:
     image: postgres:16-alpine
     restart: unless-stopped
+    volumes:
+      - ./script.sql:/docker-entrypoint-initdb.d/script.sql
     environment:
       POSTGRES_DB: marveldb
       POSTGRES_USER: marveldbuser
