feat: kafka variables in app properties using environment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+# This app properties file was created with the developer experience in mind, the developer does not need to
+# set any environment variables because all the variables have the default value, which is the values necessary
+# to run the application locally
+
+# When the application is deployed, then the infrastructure as a code will inject all the variables necessary for the
+# application to run in the specific environment, should this environment be the staging, production or any other environment.
+
 #Microservice variables
 spring.application.name=room-reservation-service
 server.port=${SERVER_PORT:8080}
@@ -16,6 +23,6 @@ spring.jpa.show-sql=true
 spring.cloud.openfeign.client.config.payment-service-client.url=${PAYMENT_SERVICE_URL:http://localhost:9090/host/credit-card-payment-api}
 
 # kafka
-kafka.bootstrap.servers=127.0.0.1:9092
-kafka.group-id=group_id
+kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS:127.0.0.1:9092}
+kafka.group-id=${KAFKA_GROUP_ID:group_id}
 kafka.topic-name=bank-transfer-payment-update
